--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@types/three": "^0.178.1",
+    "class-variance-authority": "^0.7.0",
     "clsx": "2.1.1",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.453.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "tailwind-merge": "2.5.4",
     "tailwindcss-animate": "1.0.7",
-    "@radix-ui/react-navigation-menu": "^1.2.1",
-    "class-variance-authority": "^0.7.0"
+    "three": "^0.178.0"
   },
   "devDependencies": {
     "@types/react": "18.2.0",
